--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -70,3 +70,7 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add -A
           git diff --quiet && git diff --staged --quiet || (git commit -m "Auto update by GitHub Actions at $(TZ=Asia/Shanghai date)" && git push)
+permissions:
+  contents: read
+  pages: write
+  id-token: write
